terraform/ingress-ctrl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas
  labels:
    release: atlas-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlas
      release: atlas-release
  template:
    metadata:
      labels:
        app: atlas
        release: atlas-release
    spec:
      containers:
        - name: atlas
          command: [
              "/bin/bash",
              "-c",
              "/apache-atlas-2.1.0-SNAPSHOT/bin/atlas_start.py;
                      tail -f /apache-atlas-2.1.0-SNAPSHOT/logs/*.log;"
          ]
          image: "manjitsing664/atlasimage:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 21000
          volumeMounts:
            - name: atlas-config
              mountPath: /apache-atlas-2.1.0-SNAPSHOT/conf/atlas-application.properties
              subPath: atlas-application.properties
      volumes:
        - name: atlas-config
          configMap:
            name: atlas-config

---
apiVersion: v1
kind: Service
metadata:
  name: atlas
  labels:
    app: atlas
    chart: atlas-0.1.0
spec:
  type: ClusterIP
  ports:
    - port: 21000
      targetPort: 21000
      protocol: TCP
  selector:
    app: atlas
