terraform/ingress-ctrl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: aks-helloworld
