terraform/ingress-ctrl/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: atlass-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: aks-helloworld
              servicePort: 80
            path: /hello(.*)
          - backend:
              serviceName: atlas
              servicePort: 21000
            path: /atlas(/|$)(.*)
          - backend:
              serviceName: atlas
              servicePort: 21000
            path: /(.*)
